--- a/quarto_webpage/bibliography.bib
+++ b/quarto_webpage/bibliography.bib
@@ -1,4 +1,44 @@
 
+@MISC{Vandvik2022-dm,
+  title  = "Data repository for the Vestland Climate Grid and the {SeedClim}
+            experiments",
+  author = "{Vandvik, V. , and the Vestland Climate Grid and SeedClim Project
+            Teams,
+  year   =  2022
+}"
+}
+
+@ARTICLE{Marion1996-zr,
+  title     = "Temperature enhancement experiments",
+  author    = "{Marion}",
+  journal   = "ITEX manual",
+  publisher = "gvsu.edu",
+  year      =  1996
+}
+
+@MISC{Telford2021-kb,
+  title  = "traitstrap: Bootstrap Trait Values",
+  author = "Telford, Richard J and Halbritter, Aud H and Maitner, Brian S",
+  year   =  2021
+}
+
+@ARTICLE{Vandvik2020-hu,
+  title     = "Biotic rescaling reveals importance of species interactions for
+               variation in biodiversity responses to climate change",
+  author    = "Vandvik, Vigdis and Skarpaas, Olav and Klanderud, Kari and
+               Telford, Richard J and Halbritter, Aud H and Goldberg, Deborah E",
+  journal   = "Proc. Natl. Acad. Sci. U. S. A.",
+  publisher = "National Acad Sciences",
+  volume    =  117,
+  number    =  37,
+  pages     = "22858--22865",
+  month     =  sep,
+  year      =  2020,
+  keywords  = "colonization; context dependency; extinction; precipitation;
+               temperature",
+  language  = "en"
+}
+
 @ARTICLE{Yang2018-uq,
   title     = "Transplants, open top chambers ({OTCs}) and gradient studies ask
                different questions in climate change effects studies",
@@ -32,19 +72,24 @@
   language  = "en"
 }
 
-@ARTICLE{Vandvik2020-hu,
-  title     = "Biotic rescaling reveals importance of species interactions for
-               variation in biodiversity responses to climate change",
-  author    = "Vandvik, Vigdis and Skarpaas, Olav and Klanderud, Kari and
-               Telford, Richard J and Halbritter, Aud H and Goldberg, Deborah E",
-  journal   = "Proc. Natl. Acad. Sci. U. S. A.",
-  publisher = "National Acad Sciences",
-  volume    =  117,
-  number    =  37,
-  pages     = "22858--22865",
-  month     =  sep,
-  year      =  2020,
-  keywords  = "colonization; context dependency; extinction; precipitation;
-               temperature",
+@ARTICLE{Fremstad1997-to,
+  title     = "Norwegian vegetation types",
+  author    = "Fremstad, E",
+  journal   = "NINA Temahefte",
+  publisher = "Norsk Institutt for Naturforskning, NINA",
+  year      =  1997
+}
+
+@ARTICLE{Klanderud2015-po,
+  title     = "The importance of biotic vs. abiotic drivers of local plant
+               community composition along regional bioclimatic gradients",
+  author    = "Klanderud, Kari and Vandvik, Vigdis and Goldberg, Deborah",
+  journal   = "PLoS One",
+  publisher = "journals.plos.org",
+  volume    =  10,
+  number    =  6,
+  pages     = "e0130205",
+  month     =  jun,
+  year      =  2015,
   language  = "en"
 }
