--- a/quarto_webpage/11_bootstrap.qmd
+++ b/quarto_webpage/11_bootstrap.qmd
@@ -15,7 +15,7 @@ library(ggplot2)
 theme_set(theme_minimal(base_size = 12))
 ```
 
-# Bootstrapping trait data
+# Bootstrapping trait data {#sec-bootstrap}
 
 <!-- fig.align = 'right',  -->
 ```{r, echo=FALSE, out.extra='style="float:right; padding:8px"'}
