--- a/quarto_webpage/9_data_curation.qmd
+++ b/quarto_webpage/9_data_curation.qmd
@@ -18,7 +18,7 @@ library(validate)
 ```
 
 
-# Data curation
+# Data curation {#sec-data-cutation}
 
 
 Data curation, transformation and cleaning are the first steps after digitizing the data.
