--- a/quarto_webpage/10_community.qmd
+++ b/quarto_webpage/10_community.qmd
@@ -243,7 +243,7 @@ NMDS <- metaMDS(cover_fat_spp,
                 trace = 0)
 
 fNMDS <- fortify(NMDS)  |> 
-  dplyr::filter(Score == "sites")  |> 
+  dplyr::filter(score == "sites")  |> 
   dplyr::bind_cols(cover_fat  |>  
               dplyr::select(year:plot_id))
 
