--- a/quarto_webpage/1_courses.qmd
+++ b/quarto_webpage/1_courses.qmd
@@ -8,13 +8,9 @@ editor_options:
 # PFTC Course information
 
 
-## PFTC 6 Aurland Norway
+## PFTC 7 South Africa
 
-The PFTC6 course will run from *23. July - 5. August 2022* and will be held in *Aurland*, western Norway. 
-The location is near Bergen where the course team will be assembling before traveling to Aurland. 
-Transport from Bergen to Aurland (by bus or car) can be organized by the course leaders.
-If you arrive via Oslo or elsewhere, transport to Aurland (by train or bus) needs to be organized by yourself. 
-All flights to Bergen should be scheduled to arrive at the latest on 22nd of July and depart at the earliest on 6th of August from Bergen (other travel needs to arrive in Aurland on the 23rd at the latest, and depart on the 5th at the latest).
+The PFTC7 course will be held in the Drakensberg Mountains in South Africa, between the **1st and 19th of December 2023**.
 
 
 ```{r}
@@ -22,6 +18,7 @@ All flights to Bergen should be scheduled to arrive at the latest on 22nd of Jul
 #| fig-cap: "The fjords in Aurland in Western Norway."
 #| fig-alt: "A photo of the fjord in Aurland in Western Norway."
 #| echo: false
+#| eval: false
 
 knitr::include_graphics('images/sites/aurland.jpg')
 ```
@@ -29,6 +26,6 @@ knitr::include_graphics('images/sites/aurland.jpg')
 
 ## Previouse courses
 
-Previously, we have held [courses](https://plantfunctionaltraitscourses.w.uib.no/courses/) in China (PFTC1 and 2), Peru (PFTC3 and 5) as well as on Svalbard (PFTC4).
+Previously, we have held [courses](https://plantfunctionaltraitscourses.w.uib.no/courses/) in China (PFTC1 and 2), Peru (PFTC3 and 5) as well as on Svalbard (PFTC4) and Norway (PFTC6).
 
 
