--- a/quarto_webpage/5_trait_collection.qmd
+++ b/quarto_webpage/5_trait_collection.qmd
@@ -41,94 +41,19 @@ Collect the leaves and minimize disturbing the surroundings as much as possible.
 
 We will collect traits in three different locations/experiments:
 
-- At four sites along an elevational gradient (500 - 1300 m a.s.l.), with and without grazing
-- Incline project: four sites with ambient and warming using OTCs
-- ThreeD project: two sites with different global change treatments including ambient/warming using transplants, nitrogen addition and grazing
+- At 5-6 sites along an elevational gradient (2000 - 3000 m a.s.l.)
+- RangeX project: two sites with ambient and warming using OTCs, with native and novel competitors
 
-The specific sampling and number of species will vary between the different projects, but we will focus on the following alpine and general species:
-
-```{r}
-#| label: sp-list
-#| echo: false
-tibble(Taxon = c(# Incline wishlist (alpine)
-                        "Sibbaldia procumbens",
-                        "Veronica alpina",
-                        "Bistorta vivipara",
-                        "Salix herbacea",
-                        "Alchemilla alpina",
-                        "Agrostis capillaris",
-                        "Anthoxanthum odoratum",
-                        "Carex bigelowii",
-                        "Poa alpina",
-                        "Thalictrum alpinum",
-                        "Festuca rubra",
-
-                        # other alpines
-                        "Saussurea alpina",
-
-                        # expanded sampling (whole elev gradient)
-                        "Achillea millefolium",
-                        "Agrostis capillaris",
-                        "Campanula rotundifolia",
-                        "Carex vaginata",
-                        "Leontodon autumnalis"
-                        ),
-       Type = c(rep("alpine", 12),
-                rep("general", 5))) |> kbl()
-```
+The specific sampling and number of species will vary between the different projects.
 
 
-**Intraspecific group**
+**Trait sampling protocol**
 
-We will work within the **INCLINE project plots** (see @fig-exp-designIncline) focusing on:
-- 4 sites along a precipitation gradient
-- a warming treatment (OTC vs Ambient)
-- 16 grassland species
-
-Follow the species list for our group (see @label-sp-list) and work within the OTC and control plots. DO NOT collect plants from within the marked rectangular INCLINE plots or if there is a trampled zone around the plots. We will collect a maximum of 10 individuals per species, per treatment, per site. Ideally, we will find 2 individuals/per species for each treatment and from 5 of the 7 blocks (a pair of OTCs and control plots). Our minimum is 5 individuals per species/treatment/site.  
-
-Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings), and individuals with healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration). Each individual should be at least one to two meters away from each other, to avoid sampling individuals from the same genetic individual.  
-
-Before collecting the individual, measure its height (see below). For very large individuals that we won't collect the whole plant, i.e. shrubs, large forbs, we will collect 3-5 leaves from the individual, making sure to include the petiole. If you are uncertain whether something is a leaf vs. leaflet, ask your group leader.  
-
-If you cannot find 5 individuals of each species, that is ok. After a reasonable search, we'll move on.
-
-
-```{r}
-#| label: fig-exp-designIncline
-#| fig-cap: "A) The experiment is set up along a precipitation gradient in South Western Norway, from the driest site Ulvehaugen, in the east, to the wettest site Skjellingahaugen in the west. B) At each site, an experimental warming treatment has been imposed on alpine grassland vegetation using Open Top Chambers (OTCs), and paired control plots. There are seven sets of OTCs and control plots at each site."
-#| fig-alt: "A conceptual figure showing the experimental design and plot set up."
-
-knitr::include_graphics('images/sites/PFTC6 INCLINE Sampling Regime Overview Short.jpg')
-```
-
-**Global change group and elevational gradient**
-
-For the **ThreeD project** we will collect the following treatments:
-- 3 ambient controls
-- 3 warm controls
-- ambient natural grazing
-- ambient and warm N levels: 5, 10, 50 and 150
-
-Each plot is 50 x 50 cm large and has an inner and outer part (see @fig-exp-design2).
-The plots are marked with metal tubes in each corner and a label on the top.
-The leaves should be collected from the outer part (destructive part) and if possible the inner part should stay untouched.
-
-For the **elevational gradient**, we will in addition collect leaves at Høgsete and Vikelsand inside and outside the fence.
-For this, we will collect species according to the seedclim controls.
-The plants will not be collected from the plots, but from within the blocks, and from outside the fence.
-
-
-```{r}
-#| label: fig-exp-design2
-#| fig-cap: "A) The experiment are set up along an elevational gradient that represents a productivity gradient. The experimental treatments are warming (brown), a grdient of nitrogen addition (grey to green) and their combination. These treatments are crossed with four grazing treatment: control (no clipping), intermediate and intensive clipping, and natural grazing outside the grazing exclosure. B) Example of a plot divided into non destructive (inner square) and and destructive sampling area (outer square)."
-#| fig-alt: "A conceptual figure showing the experimental design and plot set up."
-
-knitr::include_graphics('images/sites/ExperimentalDesign.jpg')
-```
+The leaves should be collected from each 1 x 1 m plot or close to it.
 
 We aim to collect leaves from the species that make up 80% of the cover in each plot.
 For each plot we will generate a species list.
+
 Below is an example code to generate such a species list:
 
 ```{r cumsum, eval=FALSE, echo=TRUE}
@@ -144,17 +69,15 @@ cover |>
 
 ```
 
-For each plot and species find 5 individuals that are spread across the plot to avoid sampling clones.
+For each plot and species find 3 individuals that are spread across the plot to avoid sampling clones.
 Choose reproductively mature adults with fully expanded leaves (i.e. not seedlings) and healthy-looking leaves (i.e. not grazed, no signs of pathogen or herbivore attack, no discoloration).
-
-For the grazing treatments, try to find mature and fully grown leaves if possible.
 
 Measure the height of each individual plant and note down the height on the zip-loc bag (see below).
 
 Collect 1 leaf from the individual, making sure to include the petiole (@fig-leaf-anatomy).
 If you are uncertain whether something is a leaf vs. leaflet (@fig-leaflets), ask your group leader.
 
-If you cannot find 5 individuals of each species, that is ok.
+If you cannot find 3 individuals of each species, that is ok.
 After a reasonable search, move on to the next species or plot.
 
 ::: {#fig-grasslands layout-ncol="2"}
@@ -187,7 +110,7 @@ knitr::include_graphics("images/trait_wheel/height.png")
 ```
 
 
-Record this measurement using legibly numbers (@fig-numbers) on the zip-loc bag.
+Record this measurement using legibly numbers (@fig-numbers) on the zip-loc bag (@fig-zip-loc).
 Place the leaf/leaves for each individual in a bag with wet paper towels for transfer to lab.
 
 ```{r}
@@ -199,6 +122,15 @@ knitr::include_graphics("images/trait_wheel/numbers.png")
 
 ```
 
+```{r}
+#| label: fig-zip-loc
+#| fig-cap: "Sticker for Zip-loc bag"
+#| fig-alt: "Sticker for Zip-loc bag"
+
+knitr::include_graphics("images/trait_wheel/ziploc_label.png")
+
+```
+
 ```{r process, out.width='20%'}
 
 knitr::include_graphics("images/trait_wheel/Process.png")
@@ -207,7 +139,7 @@ knitr::include_graphics("images/trait_wheel/Process.png")
 
 ## Preparing leaves for measuring traits in lab
 
-Select one (for the global change group) or five (for the intraspecific group) leaf/leaves per individual.
+Select one leaf per individual.
 For analysing chemical traits such as percent P, C, N and isotopes, a certain amount of dry biomass is needed.
 Make sure that we are collecting 0.03 g (30 mg) dried leaf material.
 Otherwise select several leaves until there is enough dry weight.
@@ -219,7 +151,7 @@ Add a sticker to enter the information and a barcode sticker to the envelope (@f
 Attach the sticker with a stapler.
 
 ::: {#fig-label layout-ncol="2"}
-![Label with information](images/trait_wheel/label.png)
+![Label with information](images/trait_wheel/envelope_label.png)
 
 ![Barcode with unique leaf ID](images/trait_wheel/barcode.gif){#fig-barcode}
 
@@ -238,18 +170,25 @@ Carefully, check @tbl-info for the different options for the information on the 
 Place the leaf inside the envelope and put the envelope in a box for the next step.
 Make sure the envelopes are kept wet at all times.
 
-| Variable            | What to fill in                             |                    |
+| Variable            | What to fill in                             |                |
 |:----------------|:------------------------------------|:----------------|
-|                     | Three-D                                     | INCLINE            |
-| Collection day      | add day, e.g. 24                            | add day, e.g. 24   |
-| Site                | Vik, Joa, Lia                               | Ulv, Lav, Gud, Skj |
-| Elevation           | 469, 920, 1290                              | 1208, 1097, 1213, 1088         |
-| Genus               | Bistorta                                    | Bistorta                 |
-| Species             | vivipara                                    | vivipara                   |
-| Project             | Trait = 3D, Sean = group 3, Drone = group 5 | Trait = I          |
-| Experiment          | ambient/warm, N1-10, C/M/I/N                | control or OTC     |
-| PlotID              | turfID, e.g. 2 W5M 125                      | Block ID: 1-7                |
-| Individual/leaf nr. | 1-5                                         | 1-10/1-3           |
+|                     | Gradient                                    | RangeX            |
+| Date                | add day, e.g. 6                             | add day, e.g. 6   |
+| siteID                | Number 1-5                                | LS / HS (circle) |
+| Elevation           |                                             | -      |
+| Aspect              |  East / West (circle)                       | -         |
+| Vegetation          |  -                                          | focal / native (circle)    |
+| Treat_1             |  -                                          | ambient / warm (circle)    |
+| Treat_2             |  -                                          | vegetation / bare         |
+| Species (genus and species) | Bistorta vivipara                   | Bistorta vivipara |
+| Project             | T = trait, S = spectroscophy, R = roots, P = photosynthesis | T = Trait          |
+| BlockID             | -                                           |  Number 1-10     |
+| PlotID              | Number 1-5                                  |  Number 1-6      |
+| PlantID             | Number 1-3                                  | -      |
+| PositionID          | -                                           | Number 1-12                |
+| LeafID              | -                                           | -                |
+| Height cm           | Number                                      | Number           |
+| Bulk nr             | Number if multiple leaves were samples      | Number if multiple leaves were samples           |
 : Information to write on the envelope. {#tbl-info}
 
 ```{r wet, out.width='15%'}
@@ -263,8 +202,8 @@ knitr::include_graphics("images/trait_wheel/Wet.png")
 
 Carefully check the rules for how to measure special plant species plants.
 
-- *Festuca sp* have tightly rolled leaves and they should not be unfolded for the scanning.
-- *Hyperzia sp* and *Lycopodium sp* have tiny leaves. Choose a 10cm piece of stem and scrape of all the leaves from this part for scanning. Make sure the leaves do not overlap
+- *xx sp* have tightly rolled leaves and they should not be unfolded for the scanning.
+- *xx sp* have tiny leaves. Choose a 10 cm piece of stem and scrape of all the leaves from this part for scanning. Make sure the leaves do not overlap
 :::
 
 ## Wet mass
@@ -310,9 +249,15 @@ Open VNC Viewer and type in the IP address corresponding to your PI (@tbl-pi-ip)
 | r2-d2              | 169.254.231.2   |
 | deathstar          | 169.254.152.80  |
 | mr. spock          | 169.254.204.207 |
+| Grogu              | 169.254.169.194 |
+| Princess Leia      | 169.254.128.185 |
+| Rey                | 169.254.217.147 |
+| Kylo Ren           | 169.254.77.108 |
 |                    |                 |
 | connect with phone | 192.168.42.42   |
 : IP addresses of the PIs. {#tbl-pi-ip}
+
+
 
 The spare SD card has the same IP address as the pi it is in!
 
@@ -323,6 +268,8 @@ Username: pi
 Password: pftc
 
 Resize the screen for convenience.
+
+If the pi goes in terminal mode, then type xstart + enter to run the desktop.
 
 *Scan leaves*
 
@@ -365,6 +312,8 @@ Carefully check the rules for how to scan special plant species plants.
 Click on the leaf icon (only needs to be done the first time).
 This will start the scanning program.
 If the scanner cannot be found, wait for a bit and try again.
+A window might pop up and you have to select the scanner.
+Choose the first option.
 Check the settings of the scanner.
 These should be set as standard, so please do not touch them if not needed.
 
@@ -455,7 +404,7 @@ knitr::include_graphics("images/trait_wheel/Data.png")
 ## Data entry
 
 Ideally the envelope should still be kept wet until this point in case any information is missing.
-Go to this [google sheet](https://docs.google.com/spreadsheets/d/1ncqbniu0NUzCfcNe2fOl6M2Yj-BeOEXcYlPZHwNiIbk/edit?usp=sharing).
+Go to this [google sheet](https://docs.google.com/spreadsheets/d/1utlnABtyry2wPjrPM01LOayVz8dRxOI1ViCETlQGCoA/edit?usp=sharing).
 Connect a barcode scanner to your computer.
 Scan the barcode of an envelope.
 Make sure that your cursor is in the right cell (ID).
